Fix the vertical alignment of the text in the Download viewer
issue #67

--- a/resources/themes/default/download-viewer.scss
+++ b/resources/themes/default/download-viewer.scss
@@ -6,7 +6,6 @@
 .container {
   display: flex;
   width: 100%;
-  align-items: baseline;
 
   font-family: $font-family-base;
   font-size: $font-size-base;
